<resources>
    <string name="app_name">Taste&amp;Flavor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Ingresar</string>
    <string name="emailLogin">Correo electrónico</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="google">Conectar con Goocle</string>
  
  
    <string name="logup"><u>Registrarse</u></string>
    <string name="Profile">Mi perfil</string>
    <string name="Favorite">Favoritos</string>
    <string name="Setting">Configuración</string>
    <string name="logout">Cerrar sesión</string>
    <string name="Communicate">Información</string>
    <string name="about">Acerca de Nosotros</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background">holaaaa</string>
</resources>
