<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginimage"
    tools:context="co.edu.udea.compumovil.gr04_20172.proyecto.Login">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:textColor="@color/fontColorLogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"
        android:textSize="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.504" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:hintTextAppearance="@style/TextInputLayout">
        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="368dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:hint="@string/emailLogin"
            android:focusedByDefault="false"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="false"
            android:textColor="@color/fontColorLogin"
            android:textSize="25dp"
            android:textColorHint="@color/fontColorLogin"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:hintTextAppearance="@style/TextInputLayout">
        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="368dp"
            android:layout_height="46dp"
            android:hint="@string/passwordLogin"
            android:gravity="center"
            android:textSize="25dp"
            android:textColorHint="@color/fontColorLogin"
            android:inputType="textPassword"
            android:textColor="@color/fontColorLogin" />

    </android.support.design.widget.TextInputLayout>



    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="234dp"
        android:layout_height="144dp"
        app:srcCompat="@drawable/logotf"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.977"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:layout_marginLeft="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonGoogle"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
        app:layout_constraintHorizontal_bias="0.437" />

    <TextView
        android:id="@+id/logUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/fontColorLogin"
        android:textSize="25dp"
        android:text="@string/logup"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>

    <!--
    <android.support.design.widget.TextInputLayout
    android:id="@+id/input_layout_ubication"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    </android.support.design.widget.TextInputLayout>
    -->